手机端修复：NapCat 页表格加横向滚动 + 仪表盘 Card 宽度自适应
- NapCatPage 运行中/记忆实例表外层加 div.overflow-x-auto，table 加 min-w
- DashboardPage NapCat 实例 Card 加 min-w-0，头部 Badge 组 flex-wrap 防挤压
- 新增 scripts/fire-restart.sh 和 scripts/fire-stop.sh 供宝塔计划任务使用
- CLAUDE.md 同步补记新增的 skills/hooks

Co-Authored-By: Claude Opus 4.7 (1M context) <noreply@anthropic.com>